feat(mcp-server-computer): 添加电脑配置查询和写入功能 - 新增 mcp-server-computer 模块，实现电脑配置查询和写入功能 - 添加 ComputerService 服务类，提供查询电脑配置和写入配置文件的方法- 创建 ComputerFunctionRequest 和 ComputerFunctionResponse 模型类，用于定义电脑配置请求和响应格式 - 在 ai-knowledge-app 中配置 mcp-server-computer，支持通过 MCP 方式调用电脑配置相关功能 - 更新 OllamaConfig 和 OpenAIConfig，配置 Ollama 聊天模型替代 OpenAI

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ai-knowledge-app</module>
         <module>ai-knowledge-trigger</module>
+        <module>mcp-server-computer</module>
     </modules>
 
     <parent>
