--- a/ai-knowledge-app/src/main/resources/config/mcp-servers-config.json
+++ b/ai-knowledge-app/src/main/resources/config/mcp-servers-config.json
@@ -7,6 +7,11 @@
         "-jar",
         "/Users/fangyuan/Environment/Maven/repository/xyz/kbws/mcp-server-computer/1.0/mcp-server-computer-1.0.jar"
       ]
+    },
+    "mcp-server-csdn": {
+        "command": "java",
+        "args": [
+        ]
     }
   }
 }
